--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   padding: 0;
   height: 100%;
   background-color: #323232;
+  background: #323232;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 100%;
@@ -14,6 +15,7 @@ body {
 .main,
 .footer {
   background-color: #323232;
+  background: #323232;
   height: 100%;
 }
 
