--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  background-color: #323232;
-  background: #323232;
+  background-color: rgb(50, 50, 50);
+  background: rgb(50, 50, 50);
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 100%;
@@ -14,8 +14,8 @@ body {
 .header,
 .main,
 .footer {
-  background-color: #323232;
-  background: #323232;
+  background-color: rgb(50, 50, 50);
+  background: rgb(50, 50, 50);
   height: 100%;
 }
 
